--- a/vignettes/Child_RMDs/_AQoL_6D_Replication_Set_Up.Rmd
+++ b/vignettes/Child_RMDs/_AQoL_6D_Replication_Set_Up.Rmd
@@ -9,6 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 library(xtable) # EDIT
 library(FBaqol) # EDIT
+library(magrittr)
 ```
 
 ```{r}
