--- a/vignettes/Child_RMDs/AQoL_6D_Replication_Fns.Rmd
+++ b/vignettes/Child_RMDs/AQoL_6D_Replication_Fns.Rmd
@@ -37,10 +37,10 @@ transform_tb_to_mdl_inp <- function(data_tb,
                               }
 fit_gsn_log_lnk <- function(data_tb,
                             dep_var_nm_1L_chr = "aqol6d_total_w",
-                          predictor_vars_nms_chr,
-                          id_var_nm_1L_chr = "fkClientID",
-                          iters_1L_int = 4000L,
-                          seed_1L_int = 1000L){
+                            predictor_vars_nms_chr,
+                            id_var_nm_1L_chr = "fkClientID",
+                            iters_1L_int = 4000L,
+                            seed_1L_int = 1000L){
   data_tb <- transform_tb_to_mdl_inp(data_tb,
                                      dep_var_nm_1L_chr = dep_var_nm_1L_chr,
                                      predictor_vars_nms_chr = predictor_vars_nms_chr)
@@ -51,27 +51,17 @@ fit_gsn_log_lnk <- function(data_tb,
                                         id_var_nm_1L_chr = id_var_nm_1L_chr,
                                         iters_1L_int = iters_1L_int,
                                         seed_1L_int = seed_1L_int)
-    # 
-    # 
-    # brms::brm(formula = as.formula(paste0("aqol6d_total_w ~ ",
-    #                                                     purrr::map_chr(predictor_vars_nms_chr,
-    #                                                                    ~ paste0(.x,
-    #                                                                             "_baseline + ",
-    #                                                                             .x,"_change + ")) %>%
-    #                                                       paste0(collapse = ""),
-    #                                                     "(1|fkClientID)")), 
-    #                data = data_tb,
-    #                family = gaussian(link="log"), 
-    #                iter = iter_1L_dbl,
-    #                seed = seed_dbl[1])
   return(brm_model_ls)
 }
 make_smry_of_brm_mdl <- function(brm_model_ls,
+                                 data_tb,
                                  dep_var_nm_1L_chr = "aqol6d_total_w",
                                  predictor_vars_nms_chr,
-                                 data_tb,
                                  fn = calculate_rmse,
+                                 model_nm_1L_chr = NA_character_,
                                  seed_1L_dbl = 23456){
+  if(is.na(model_nm_1L_chr))
+    model_nm_1L_chr <- predictor_vars_nms_chr[1]
   set.seed(seed_1L_dbl)
   predictions <- predict(brm_model_ls, summary=F)
   coef <- summary(brm_model_ls, digits = 4)$fixed[2:5,1:4]
@@ -91,7 +81,7 @@ make_smry_of_brm_mdl <- function(brm_model_ls,
                                                  " change"))) %>%
                          purrr::flatten_chr(),
                        "R2", "RMSE", "Sigma"),
-           Model = paste(var1, " model")) %>% 
+           Model = model_nm_1L_chr) %>% 
     dplyr::mutate(`95% CI`= paste(`l.95..CI`,",", `u.95..CI`)) %>% 
     dplyr::rename (SE=Est.Error) %>% 
     dplyr::select(Model, Parameter, Estimate, SE, `95% CI`)
@@ -108,7 +98,7 @@ make_brm_model_plts <- function(brm_model_ls,
                            seed_1L_dbl = 23456){
   plot_1_plt <- plot(brm_model_ls, ask=F)
   set.seed(seed_1L_dbl)
-  data_tb$Predicted <- predict(brm_model_ls)[,1] %>% tfmn_fn() #1-exp(-exp(predict(brm_model_ls)[,1]))
+  data_tb$Predicted <- predict(brm_model_ls)[,1] %>% tfmn_fn()
   plot_2_plt <- data_tb %>% 
         dplyr::mutate(Observed = !!rlang::sym(dep_var_nm_1L_chr)) %>% 
         tidyr::gather(variable, value, Predicted, Observed) %>%
@@ -120,16 +110,13 @@ make_brm_model_plts <- function(brm_model_ls,
         ggplot2::theme(legend.position = "bottom") +
         ggplot2::labs(x = dep_var_desc_1L_chr, 
                       y = "Density", fill="")
-    plot_3_plt <- rlang::exec(ggplot2::ggplot(data_tb), 
+    plot_3_plt <- ggplot2::ggplot(data_tb) +
+      rlang::exec(plot3_fn,  
                               ggplot2::aes(x = !!rlang::sym(dep_var_nm_1L_chr), 
                                        y = Predicted,
                                        col = !!rlang::sym(round_var_nm_1L_chr)),
                               size = 1,
-                              !!!args_ls) + #ggplot(data_tb) +
-      # ggplot2::geom_point(ggplot2::aes(x = !!rlang::sym(dep_var_nm_1L_chr), 
-      #                                  y = Predicted,
-      #                                  col = !!rlang::sym(round_var_nm_1L_chr)),
-      #                     size = 1) +
+                              !!!args_ls) + 
       ggplot2::theme_bw()  + 
     ggplot2::xlim(0,1)  + 
     ggplot2::ylim(0,1)  + 
@@ -163,7 +150,7 @@ fit_ts_model_with_brm <- function(data_tb,
                                id_var_nm_1L_chr,
                                link_1L_chr = "identity",
                                iters_1L_int = 4000L,
-                               seed_1L_int = 1000){
+                               seed_1L_int = 1000L){
       brm_model_ls <- brms::brm(formula = as.formula(paste0(dep_var_nm_1L_chr,#"aqol6d_total_w_cloglog",
                                                             " ~ ", 
                                                         purrr::map_chr(predictor_vars_nms_chr,
@@ -174,17 +161,17 @@ fit_ts_model_with_brm <- function(data_tb,
                                                         "(1|",
                                                         id_var_nm_1L_chr,
                                                         ")")), 
-                   data = data_tb,
-                   family = gaussian(link=link_1L_chr), 
-                   iter = iters_1L_int,
-                   seed = seed_1L_int)
+                                data = data_tb,
+                                family = gaussian(link=link_1L_chr), 
+                                iter = iters_1L_int,
+                                seed = seed_1L_int)
       return(brm_model_ls)
                                }
 fit_clg_log_tfmn <- function(data_tb,
                              dep_var_nm_1L_chr = "aqol6d_total_w_cloglog",
                            predictor_var_nms_chr,
                            iters_1L_int = 4000L,
-                           seed_1L_int = 1000 
+                           seed_1L_int = 1000L 
                            ){
   data_tb <- transform_tb_to_mdl_inp(data_tb,
                                predictor_vars_nms_chr = predictor_vars_nms_chr)
@@ -254,13 +241,34 @@ fit_clg_log_tfmn <- function(data_tb,
 ### Gaussian with log link
 
 ```{r}
+dep_var_nm_1L_chr = "aqol6d_total_w"
 predictor_vars_nms_chr <- c("PHQ9","SOFAS")
-gsn_log_lnk_mdl_ls <- fit_gsn_log_lnk(Baseline_follow,predictor_vars_nms_chr)
-model1 <- make_smry_of_brm_mdl(gsn_log_lnk_mdl_ls,
-                               data_tb = Baseline_follow,
-                               fn = calculate_rmse,
-                               predictor_vars_nms_chr = predictor_vars_nms_chr)
-mdl_1_plts_ls <- make_brm_model_plts(data_tb)
+gsn_log_lnk_mdl_ls <- fit_gsn_log_lnk(Baseline_follow,
+                                      dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                                      predictor_vars_nms_chr = predictor_vars_nms_chr)
+smry_of_mdl_1 <- make_smry_of_brm_mdl(gsn_log_lnk_mdl_ls,
+                               data_tb = transform_tb_to_mdl_inp(Baseline_follow,
+                                                                 dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                                                                 predictor_vars_nms_chr = predictor_vars_nms_chr),
+                               dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                               predictor_vars_nms_chr = predictor_vars_nms_chr,
+                               fn = calculate_rmse
+                               )
+mdl_1_plts_ls <- make_brm_model_plts(gsn_log_lnk_mdl_ls,
+                                     data_tb)
+print_brm_model(gsn_log_lnk_mdl_ls,mdl_1_plts_ls)
+old_data_tb <- transform_tb_to_mdl_inp(Baseline_follow,
+                                dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                                predictor_vars_nms_chr = predictor_vars_nms_chr) %>%
+          dplyr::select(c("fkClientID",
+                          dplyr::all_of(dep_var_nm_1L_chr),
+                          predictor_vars_nms_chr %>% purrr::map(~paste0(.x,c("","_baseline","_change"))) %>%
+                            purrr::flatten_chr()))
+cnfdl_gsn_log_lnk_mdl_ls <- gsn_log_lnk_mdl_ls
+cnfdl_gsn_log_lnk_mdl_ls$data <- old_data_tb[2,] # Need to sample or simulate replacement
+predict(cnfdl_gsn_log_lnk_mdl_ls, 
+        newdata = old_data_tb[1,],
+        re_formula = NA)
 
 ```
 
@@ -277,7 +285,7 @@ mdl_2_plts_ls <- make_brm_model_plts(data_tb)
 ### Cloglog transformed AQoL-6D scores
 
 ```{r}
-model2<-fit_clg_log_tfmn(Baseline_follow,"PHQ9","SOFAS")
+model2 <- fit_clg_log_tfmn(Baseline_follow,"PHQ9","SOFAS")
 ```
 
 ```{r}
