--- a/vignettes/Child_RMDs/AQoL_6D_Replication_Fns.Rmd
+++ b/vignettes/Child_RMDs/AQoL_6D_Replication_Fns.Rmd
@@ -12,38 +12,32 @@ calculate_rmse <- function(y_dbl,yhat_dbl){
   rmse_dbl <- sqrt(mean((yhat_dbl-y_dbl)^2))
   return(rmse_dbl)
   }
-transform_tb_to_mdl_inp <- function(data_tb,
-                                        dep_var_nm_1L_chr = "aqol6d_total_w",
-                                    predictor_vars_nms_chr,
-                                    id_var_nm_1L_chr = "fkClientID",
-                                    round_var_nm_1L_chr = "round",
-                                    round_bl_val_1L_chr = "Baseline"){
-    data_tb <- data.frame(data_tb)
-  tfd_for_gsn_log_mdl_tb <- data_tb %>% 
-    dplyr::select(dplyr::all_of(dep_var_nm_1L_chr),
-                  dplyr::all_of(id_var_nm_1L_chr),
-                  dplyr::all_of(round_var_nm_1L_chr),
-                  dplyr::all_of(predictor_vars_nms_chr)) %>% 
-    dplyr::group_by(!!rlang::sym(id_var_nm_1L_chr)) %>% 
-    dplyr::arrange(!!rlang::sym(id_var_nm_1L_chr),!!rlang::sym(round_var_nm_1L_chr)) %>% 
-    dplyr::mutate(dplyr::across(dplyr::all_of(predictor_vars_nms_chr), 
-                    .fns = list(baseline = ~ dplyr::first(.)/100,
-                                change = ~ ifelse(!!rlang::sym(round_var_nm_1L_chr)==round_bl_val_1L_chr,
-                                                0,
-                                                (.-lag(.))/100))))  %>% 
-    dplyr::mutate(!!rlang::sym(paste0(dep_var_nm_1L_chr,"_cloglog")) := log(-log(1-ifelse(!!rlang::sym(dep_var_nm_1L_chr)==1,0.999,!!rlang::sym(dep_var_nm_1L_chr))))) %>% 
-    na.omit()
-  return(tfd_for_gsn_log_mdl_tb)
-                              }
+calculate_rmse_tfmn <- function(y_dbl,yhat_dbl){
+  rmse_tfmn_dbl <- sqrt(mean((1-exp(-exp(yhat_dbl))-y_dbl)^2))
+  return(rmse_tfmn_dbl)
+}
+fit_clg_log_tfmn <- function(data_tb,
+                             dep_var_nm_1L_chr = "aqol6d_total_w_cloglog",
+                             predictor_vars_nms_chr,
+                             id_var_nm_1L_chr = "fkClientID",
+                             iters_1L_int = 4000L,
+                             seed_1L_int = 1000L
+                           ){
+  brm_model_ls <- fit_ts_model_with_brm(data_tb,
+                                        dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                                        predictor_vars_nms_chr = predictor_vars_nms_chr,
+                                        link_1L_chr = "identity",
+                                        id_var_nm_1L_chr = id_var_nm_1L_chr,
+                                        iters_1L_int = iters_1L_int,
+                                        seed_1L_int = seed_1L_int)
+    return(brm_model_ls)
+}
 fit_gsn_log_lnk <- function(data_tb,
                             dep_var_nm_1L_chr = "aqol6d_total_w",
                             predictor_vars_nms_chr,
                             id_var_nm_1L_chr = "fkClientID",
                             iters_1L_int = 4000L,
                             seed_1L_int = 1000L){
-  data_tb <- transform_tb_to_mdl_inp(data_tb,
-                                     dep_var_nm_1L_chr = dep_var_nm_1L_chr,
-                                     predictor_vars_nms_chr = predictor_vars_nms_chr)
   brm_model_ls <- fit_ts_model_with_brm(data_tb,
                                         dep_var_nm_1L_chr = dep_var_nm_1L_chr,
                                         predictor_vars_nms_chr = predictor_vars_nms_chr,
@@ -53,40 +47,28 @@ fit_gsn_log_lnk <- function(data_tb,
                                         seed_1L_int = seed_1L_int)
   return(brm_model_ls)
 }
-make_smry_of_brm_mdl <- function(brm_model_ls,
-                                 data_tb,
-                                 dep_var_nm_1L_chr = "aqol6d_total_w",
-                                 predictor_vars_nms_chr,
-                                 fn = calculate_rmse,
-                                 model_nm_1L_chr = NA_character_,
-                                 seed_1L_dbl = 23456){
-  if(is.na(model_nm_1L_chr))
-    model_nm_1L_chr <- predictor_vars_nms_chr[1]
-  set.seed(seed_1L_dbl)
-  predictions <- predict(brm_model_ls, summary=F)
-  coef <- summary(brm_model_ls, digits = 4)$fixed
-  coef <- coef[1:nrow(coef),1:4]
-  R2 <- brms::bayes_R2(brm_model_ls)
-  RMSE <- psych::describe(apply(predictions,
-                                1,
-                                fn,
-                                y_dbl = data_tb %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr))),
-                          quant = c(.25, .75), 
-                          skew = F, 
-                          ranges = F)
-  RMSE <- cbind(RMSE$mean, RMSE$sd, RMSE$Q0.25, RMSE$Q0.75)
-  Sigma <- summary(brm_model_ls, digits = 4)$spec_par[1:4]
-  smry_of_brm_mdl_tb <- data.frame(round(rbind(coef,R2,RMSE,Sigma),3))  %>% 
-    dplyr::mutate(Parameter=c("Intercept",purrr::map(predictor_vars_nms_chr,
-                                  ~ paste0(.x, c(" baseline", 
-                                                 " change"))) %>%
-                         purrr::flatten_chr(),
-                       "R2", "RMSE", "Sigma"),
-           Model = model_nm_1L_chr) %>% 
-    dplyr::mutate(`95% CI`= paste(`l.95..CI`,",", `u.95..CI`)) %>% 
-    dplyr::rename (SE=Est.Error) %>% 
-    dplyr::select(Model, Parameter, Estimate, SE, `95% CI`)
-  return(smry_of_brm_mdl_tb)
+fit_ts_model_with_brm <- function(data_tb,
+                               dep_var_nm_1L_chr,
+                               predictor_vars_nms_chr,
+                               id_var_nm_1L_chr,
+                               link_1L_chr = "identity",
+                               iters_1L_int = 4000L,
+                               seed_1L_int = 1000L){
+      brm_model_ls <- brms::brm(formula = as.formula(paste0(dep_var_nm_1L_chr,#"aqol6d_total_w_cloglog",
+                                                            " ~ ", 
+                                                        purrr::map_chr(predictor_vars_nms_chr,
+                                                                       ~ paste0(.x,
+                                                                                "_baseline + ",
+                                                                                .x,"_change + ")) %>%
+                                                          paste0(collapse = ""),
+                                                        "(1|",
+                                                        id_var_nm_1L_chr,
+                                                        ")")), 
+                                data = data_tb,
+                                family = gaussian(link=link_1L_chr), 
+                                iter = iters_1L_int,
+                                seed = seed_1L_int)
+      return(brm_model_ls)
 }
 make_brm_model_plts <- function(brm_model_ls,
                            data_tb,
@@ -131,110 +113,40 @@ make_brm_model_plts <- function(brm_model_ls,
                            plot_3_plt)
 return(brm_model_plts_ls)
 }
-print_brm_model <- function(brm_model_ls,
-                            brm_model_plts_ls){
-  print(brm_model_plts_ls[[1]])
-  print(summary(brm_model_ls, digits = 4))
-  print(brm_model_plts_ls[[2]])
-  brm_model_plts_ls[[3]]
-                            }
-calculate_rmse_tfmn <- function(y_dbl,yhat_dbl){
-  rmse_tfmn_dbl <- sqrt(mean((1-exp(-exp(yhat_dbl))-y_dbl)^2))
-  return(rmse_tfmn_dbl)
-  }
-fit_ts_model_with_brm <- function(data_tb,
-                               dep_var_nm_1L_chr,
-                               predictor_vars_nms_chr,
-                               id_var_nm_1L_chr,
-                               link_1L_chr = "identity",
-                               iters_1L_int = 4000L,
-                               seed_1L_int = 1000L){
-      brm_model_ls <- brms::brm(formula = as.formula(paste0(dep_var_nm_1L_chr,#"aqol6d_total_w_cloglog",
-                                                            " ~ ", 
-                                                        purrr::map_chr(predictor_vars_nms_chr,
-                                                                       ~ paste0(.x,
-                                                                                "_baseline + ",
-                                                                                .x,"_change + ")) %>%
-                                                          paste0(collapse = ""),
-                                                        "(1|",
-                                                        id_var_nm_1L_chr,
-                                                        ")")), 
-                                data = data_tb,
-                                family = gaussian(link=link_1L_chr), 
-                                iter = iters_1L_int,
-                                seed = seed_1L_int)
-      return(brm_model_ls)
-                               }
-fit_clg_log_tfmn <- function(data_tb,
-                             dep_var_nm_1L_chr = "aqol6d_total_w_cloglog",
-                           predictor_var_nms_chr,
-                           iters_1L_int = 4000L,
-                           seed_1L_int = 1000L 
-                           ){
-  data_tb <- transform_tb_to_mdl_inp(data_tb,
-                               predictor_vars_nms_chr = predictor_vars_nms_chr)
-  brm_model_ls <- fit_ts_model_with_brm(data_tb,
-                                        dep_var_nm_1L_chr = dep_var_nm_1L_chr,
-                                        predictor_vars_nms_chr = predictor_vars_nms_chr,
-                                        link_1L_chr = "identity",
-                                        iters_1L_int = iters_1L_int,
-                                        seed_1L_int = seed_1L_int)
-    return(brm_model_ls)
-}
-write_ts_mdl <- function(mdl_ls,
-                      data_tb,
-                      dep_var_nm_1L_chr = "aqol6d_total_w",
-                      predictor_vars_nms_chr,
-                      id_var_nm_1L_chr = "fkClientID",
-                      model_nm_1L_chr,
-                      path_to_data_dir_1L_chr
-                      ){
-  old_data_tb <- transform_tb_to_mdl_inp(data_tb,
-                                dep_var_nm_1L_chr = dep_var_nm_1L_chr,
-                                predictor_vars_nms_chr = predictor_vars_nms_chr) %>%
-          dplyr::select(c(dplyr::all_of(id_var_nm_1L_chr),
-                          dplyr::all_of(dep_var_nm_1L_chr),
-                          predictor_vars_nms_chr %>% purrr::map(~paste0(.x,c("","_baseline","_change"))) %>%
-                            purrr::flatten_chr()))
-cnfdl_mdl_ls <- mdl_ls 
-cnfdl_mdl_ls$data <- old_data_tb %>% as.data.frame() %>% dplyr::summarise(dplyr::across(dplyr::everything(), ~ sample(.x,1))) 
-saveRDS(cnfdl_mdl_ls,paste0(path_to_data_dir_1L_chr,"/",model_nm_1L_chr,".RDS"))
-}
-write_and_make_smry_of_ts_mdl <- function(data_tb,
-                                          dep_var_nm_1L_chr = "aqol6d_total_w",
-                                          predictor_vars_nms_chr,
-                                          id_var_nm_1L_chr = "fkClientID",
-                                          model_nm_1L_chr,
-                                          path_to_data_dir_1L_chr,
-                                          fn,
-                                          print_plots_1L_lgl = T){
-  gsn_log_lnk_mdl_ls <- fit_gsn_log_lnk(data_tb,
-                                      dep_var_nm_1L_chr = dep_var_nm_1L_chr,
-                                      predictor_vars_nms_chr = predictor_vars_nms_chr)
-smry_of_mdl_1 <- make_smry_of_brm_mdl(gsn_log_lnk_mdl_ls,
-                               data_tb = transform_tb_to_mdl_inp(data_tb,
-                                                                 dep_var_nm_1L_chr = dep_var_nm_1L_chr,
-                                                                 predictor_vars_nms_chr = predictor_vars_nms_chr),
-                               dep_var_nm_1L_chr = dep_var_nm_1L_chr,
-                               predictor_vars_nms_chr = predictor_vars_nms_chr,
-                               fn = fn)
-write_ts_mdl(gsn_log_lnk_mdl_ls,
-             data_tb = data_tb,
-             dep_var_nm_1L_chr = dep_var_nm_1L_chr,
-             predictor_vars_nms_chr = predictor_vars_nms_chr,
-             id_var_nm_1L_chr = id_var_nm_1L_chr,
-             model_nm_1L_chr = model_nm_1L_chr,
-             path_to_data_dir_1L_chr = path_to_data_dir_1L_chr)
-if(print_plots_1L_lgl){
-  mdl_1_plts_ls <- make_brm_model_plts(gsn_log_lnk_mdl_ls,
-                                     transform_tb_to_mdl_inp(data_tb,
-                                                                 dep_var_nm_1L_chr = dep_var_nm_1L_chr,
-                                                                 predictor_vars_nms_chr = predictor_vars_nms_chr))
-  print_brm_model(gsn_log_lnk_mdl_ls,mdl_1_plts_ls)
-}
-
-return(smry_of_mdl_1)
-
+make_smry_of_brm_mdl <- function(brm_model_ls,
+                                 data_tb,
+                                 dep_var_nm_1L_chr = "aqol6d_total_w",
+                                 predictor_vars_nms_chr,
+                                 fn = calculate_rmse,
+                                 mdl_nm_1L_chr = NA_character_,
+                                 seed_1L_dbl = 23456){
+  if(is.na(mdl_nm_1L_chr))
+    mdl_nm_1L_chr <- predictor_vars_nms_chr[1]
+  set.seed(seed_1L_dbl)
+  predictions <- predict(brm_model_ls, summary=F)
+  coef <- summary(brm_model_ls, digits = 4)$fixed
+  coef <- coef[1:nrow(coef),1:4]
+  R2 <- brms::bayes_R2(brm_model_ls)
+  RMSE <- psych::describe(apply(predictions,
+                                1,
+                                fn,
+                                y_dbl = data_tb %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr))),
+                          quant = c(.25, .75), 
+                          skew = F, 
+                          ranges = F)
+  RMSE <- cbind(RMSE$mean, RMSE$sd, RMSE$Q0.25, RMSE$Q0.75)
+  Sigma <- summary(brm_model_ls, digits = 4)$spec_par[1:4]
+  smry_of_brm_mdl_tb <- data.frame(round(rbind(coef,R2,RMSE,Sigma),3))  %>% 
+    dplyr::mutate(Parameter=c("Intercept",purrr::map(predictor_vars_nms_chr,
+                                  ~ paste0(.x, c(" baseline", 
+                                                 " change"))) %>%
+                         purrr::flatten_chr(),
+                       "R2", "RMSE", "Sigma"),
+           Model = mdl_nm_1L_chr) %>% 
+    dplyr::mutate(`95% CI`= paste(`l.95..CI`,",", `u.95..CI`)) %>% 
+    dplyr::rename (SE=Est.Error) %>% 
+    dplyr::select(Model, Parameter, Estimate, SE, `95% CI`)
+  return(smry_of_brm_mdl_tb)
 }
 predict_from_mdl_coefs <- function(smry_of_mdl_tb,
                                    new_data_tb){
@@ -250,6 +162,104 @@ predict_from_mdl_coefs <- function(smry_of_mdl_tb,
                dplyr::pull(Estimate))
 return(pred_dbl)
 }
+print_brm_model <- function(brm_model_ls,
+                            brm_model_plts_ls){
+  print(brm_model_plts_ls[[1]])
+  print(summary(brm_model_ls, digits = 4))
+  print(brm_model_plts_ls[[2]])
+  brm_model_plts_ls[[3]]
+}
+transform_tb_to_mdl_inp <- function(data_tb,
+                                    dep_var_nm_1L_chr = "aqol6d_total_w",
+                                    predictor_vars_nms_chr,
+                                    id_var_nm_1L_chr = "fkClientID",
+                                    round_var_nm_1L_chr = "round",
+                                    round_bl_val_1L_chr = "Baseline"){
+    data_tb <- data.frame(data_tb)
+  tfd_for_gsn_log_mdl_tb <- data_tb %>% 
+    dplyr::select(dplyr::all_of(dep_var_nm_1L_chr),
+                  dplyr::all_of(id_var_nm_1L_chr),
+                  dplyr::all_of(round_var_nm_1L_chr),
+                  dplyr::all_of(predictor_vars_nms_chr)) %>% 
+    dplyr::group_by(!!rlang::sym(id_var_nm_1L_chr)) %>% 
+    dplyr::arrange(!!rlang::sym(id_var_nm_1L_chr),!!rlang::sym(round_var_nm_1L_chr)) 
+  tfd_for_gsn_log_mdl_tb <- tfd_for_gsn_log_mdl_tb %>% 
+    dplyr::mutate(dplyr::across(dplyr::all_of(predictor_vars_nms_chr), 
+                                .fns = list(baseline = ~ dplyr::first(.)/100,
+                                            change = ~ ifelse(round == "Baseline",
+                                                              0,
+                                                              (.-dplyr::lag(.))/100))))  %>% 
+    dplyr::mutate(!!rlang::sym(paste0(dep_var_nm_1L_chr,"_cloglog")) := log(-log(1-ifelse(!!rlang::sym(dep_var_nm_1L_chr)==1,0.999,!!rlang::sym(dep_var_nm_1L_chr))))) %>% 
+    na.omit()
+  return(tfd_for_gsn_log_mdl_tb)
+                              }
+write_and_make_smry_of_ts_mdl <- function(data_tb,
+                                          fn,
+                                          predictor_vars_nms_chr,
+                                          mdl_nm_1L_chr,
+                                          path_to_data_dir_1L_chr,
+                                          dep_var_nm_1L_chr = "aqol6d_total_w",
+                                          id_var_nm_1L_chr = "fkClientID",
+                                          round_var_nm_1L_chr = "round",
+                                          round_bl_val_1L_chr = "Baseline",
+                                          iters_1L_int = 4000L,
+                                          seed_1L_int = 1000L,
+                                          print_plots_1L_lgl = T){
+    tfd_data_tb <- transform_tb_to_mdl_inp(data_tb,
+                                     dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                                     predictor_vars_nms_chr = predictor_vars_nms_chr,
+                                     id_var_nm_1L_chr = id_var_nm_1L_chr,
+                                     round_var_nm_1L_chr = round_var_nm_1L_chr,
+                                     round_bl_val_1L_chr = round_bl_val_1L_chr)
+    args_ls <- list(data_tb = tfd_data_tb,
+                    dep_var_nm_1L_chr = dep_var_nm_1L_chr, # ADD CONDITIONAL LOGIC
+                    predictor_vars_nms_chr = predictor_vars_nms_chr,
+                    iters_1L_int = iters_1L_int,
+                    seed_1L_int = seed_1L_int)
+  mdl_ls <- rlang::exec(fn,!!!args_ls)
+  smry_of_ts_mdl_tb <- make_smry_of_brm_mdl(mdl_ls,
+                                            data_tb = tfd_data_tb,
+                                            dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                                            predictor_vars_nms_chr = predictor_vars_nms_chr,
+                                            fn = ifelse(identical(fn,fit_gsn_log_lnk),
+                                                        calculate_rmse,
+                                                        calculate_rmse_tfmn)#, mdl_nm_1L_chr = mdl_nm_1L_chr
+                                            )
+  write_ts_mdl(mdl_ls,
+               data_tb = tfd_data_tb,
+               dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+               predictor_vars_nms_chr = predictor_vars_nms_chr,
+               id_var_nm_1L_chr = id_var_nm_1L_chr,
+               mdl_nm_1L_chr = mdl_nm_1L_chr,
+               path_to_data_dir_1L_chr = path_to_data_dir_1L_chr)
+if(print_plots_1L_lgl){
+  mdl_1_plts_ls <- make_brm_model_plts(mdl_ls,
+                                       tfd_data_tb,
+                                       tfmn_fn = ifelse(identical(fn,fit_gsn_log_lnk),
+                                                        function(x){x},
+                                                        function(x){1-exp(-exp(x))}))
+  print_brm_model(mdl_ls,mdl_1_plts_ls)
+}
+return(smry_of_ts_mdl_tb)
+}
+write_ts_mdl <- function(mdl_ls,
+                      data_tb,
+                      dep_var_nm_1L_chr = "aqol6d_total_w",
+                      predictor_vars_nms_chr,
+                      id_var_nm_1L_chr = "fkClientID",
+                      mdl_nm_1L_chr,
+                      path_to_data_dir_1L_chr
+                      ){
+  old_data_tb <- data_tb %>%
+          dplyr::select(c(dplyr::all_of(id_var_nm_1L_chr),
+                          dplyr::all_of(dep_var_nm_1L_chr),
+                          predictor_vars_nms_chr %>% purrr::map(~paste0(.x,c("","_baseline","_change"))) %>%
+                            purrr::flatten_chr()))
+cnfdl_mdl_ls <- mdl_ls 
+cnfdl_mdl_ls$data <- old_data_tb %>% as.data.frame() %>% dplyr::summarise(dplyr::across(dplyr::everything(), ~ sample(.x,1))) 
+saveRDS(cnfdl_mdl_ls,paste0(path_to_data_dir_1L_chr,"/",mdl_nm_1L_chr,".RDS"))
+}
+
 ```
 
 ## PHQ9 
@@ -258,34 +268,48 @@ return(pred_dbl)
 
 ```{r}
 smry_of_gsn_log_mdl_1 <- write_and_make_smry_of_ts_mdl(data_tb = Baseline_follow,
-                              dep_var_nm_1L_chr = "aqol6d_total_w",
-                              predictor_vars_nms_chr = c("PHQ9","SOFAS"),
-                              id_var_nm_1L_chr = "fkClientID",
-                              path_to_data_dir_1L_chr = "../../../../../../../Data/R_Format/Utility_Models",
-                              model_nm_1L_chr = "PHQ9_GSN_LOG",
-                              fn = calculate_rmse)
+                                                       fn = fit_gsn_log_lnk,
+                                                       predictor_vars_nms_chr = c("PHQ9","SOFAS"),
+                                                       mdl_nm_1L_chr = "PHQ9_GSN_LOG",
+                                                       path_to_data_dir_1L_chr = "../../../../../../../Data/R_Format/Utility_Models",
+                                                       dep_var_nm_1L_chr = "aqol6d_total_w",
+                                                       id_var_nm_1L_chr = "fkClientID",
+                                                       iters_1L_int = 4000L,
+                                                       seed_1L_int = 1000L)
 # new_data_tb <- tibble::tibble(PHQ9_baseline = c(0.14,0.25,0.15,0.2,0.11),
 #                                  PHQ9_change = c(-0.1,-0.05,0.05,-0.06,0.1),
 #                                  SOFAS_baseline = c(0.71,0.69,0.75,0.43,0.29),
 #                                  SOFAS_change = c(0.25,-0.19,0.1,-0.1,0.2))
-new_data_tb <- old_data_tb
-pred_1_tb <- predict(readRDS(paste0(path_to_data_dir_1L_chr,"/",model_nm_1L_chr,".RDS")),
-        newdata = new_data_tb,
-        re_formula = NA)
-pred_1_dbl <- pred_1_tb[,1]
-pred_2_dbl <-predict_from_mdl_coefs(smry_of_mdl_1,
-                       new_data_tb = new_data_tb)
+
+new_data_tb <- Baseline_follow
+#path_to_data_dir_1L_chr <- "../../../../../../../Data/R_Format/Utility_Models"
+#mdl_nm_1L_chr <- "PHQ9_GSN_LOG"
+# pred_1_tb <- predict(readRDS(paste0(path_to_data_dir_1L_chr,"/",mdl_nm_1L_chr,".RDS")),
+#         newdata = new_data_tb,
+#         re_formula = NA)
+# pred_1_dbl <- pred_1_tb[,1]
+pred_2_dbl <- predict_from_mdl_coefs(smry_of_gsn_log_mdl_1,
+                       new_data_tb = new_data_tb %>% transform_tb_to_mdl_inp(predictor_vars_nms_chr = c("PHQ9","SOFAS")))
  
 ```
 
 ```{r}
+smry_of_clg_log_tfmn_mdl_1 <- write_and_make_smry_of_ts_mdl(data_tb = Baseline_follow,
+                                                       fn = fit_clg_log_tfmn,
+                                                       predictor_vars_nms_chr = c("PHQ9","SOFAS"),
+                                                       mdl_nm_1L_chr = "PHQ9_CLL_TFN",
+                                                       path_to_data_dir_1L_chr = "../../../../../../../Data/R_Format/Utility_Models",
+                                                       dep_var_nm_1L_chr = "aqol6d_total_w_cloglog",
+                                                       id_var_nm_1L_chr = "fkClientID",
+                                                       iters_1L_int = 4000L,
+                                                       seed_1L_int = 1000L)
 #predictor_vars_nms_chr <- c("PHQ9","SOFAS")
-clg_log_tfmn_mdl_ls <- fit_gsn_log_lnk(Baseline_follow,predictor_vars_nms_chr)
-model2 <- make_smry_of_brm_mdl(clg_log_tfmn_mdl_ls,
-                               data_tb = Baseline_follow,
-                               fn = calculate_rmse_tfmn,
-                               predictor_vars_nms_chr = predictor_vars_nms_chr)
-mdl_2_plts_ls <- make_brm_model_plts(data_tb)
+# clg_log_tfmn_mdl_ls <- fit_gsn_log_lnk(Baseline_follow,predictor_vars_nms_chr)
+# model2 <- make_smry_of_brm_mdl(clg_log_tfmn_mdl_ls,
+#                                data_tb = Baseline_follow,
+#                                fn = calculate_rmse_tfmn,
+#                                predictor_vars_nms_chr = predictor_vars_nms_chr)
+# mdl_2_plts_ls <- make_brm_model_plts(data_tb)
 ```
 
 ### Cloglog transformed AQoL-6D scores
